code-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  strategy: {}
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - image: linuxserver/code-server
        name: code-server
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
spec:
  selector:
    app: code-server
  ports:
  - port: 8443
    targetPort: 8443
