code-server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
spec:
  rules:
  - host: code.10.0.0.180.nip.io
    http:
      paths:
      - backend:
          serviceName: code-server
          servicePort: 8443
        path: /
